--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "material-ui-icons": "^1.0.0-beta.36",
+    "netlify-cli": "^3.30.7",
     "react": "^17.0.2",
     "react-block-ui": "^1.3.3",
     "react-dom": "^17.0.2",
